Resolved issue with text wrapping in card footers.

--- a/myrecipes/static/main.css
+++ b/myrecipes/static/main.css
@@ -114,6 +114,13 @@ body {
   text-overflow: ellipsis;
 }
 
+.footer-padding{
+  padding-right: .5rem;
+  padding-left: .5rem;
+
+}
+
+
 .collection-img-container {
   height: 150px;
   width: 150px;
